--- a/order-service-dev.properties
+++ b/order-service-dev.properties
@@ -4,3 +4,10 @@ eureka.client.service-url.defaultZone=http://localhost:8181/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 spring.application.name=order-service
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/Northwind
+spring.datasource.username=postgres
+spring.datasource.password=test
