--- a/order-service-prod.properties
+++ b/order-service-prod.properties
@@ -12,6 +12,6 @@ spring.datasource.url=jdbc:postgresql://postgres:5432/Northwind
 spring.datasource.username=postgres
 spring.datasource.password=test
 
-spring.kafka.producer.bootstrap-server=kafka:9092
+spring.kafka.producer.bootstrap-servers=kafka:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
